consertos e ajustes no xml, implementação do contador serial

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -914,12 +914,18 @@
                 android:id="@+id/qrg_indicator"
                 android:layout_width="197dp"
                 android:layout_height="65dp"
+                android:layout_marginStart="42dp"
+                android:layout_marginTop="39dp"
+                android:layout_marginEnd="492dp"
+                android:layout_marginBottom="307dp"
                 android:background="@android:drawable/dialog_holo_light_frame"
                 android:gravity="center"
                 android:textColor="@color/design_default_color_primary"
                 android:textSize="20sp"
-                tools:layout_editor_absoluteX="42dp"
-                tools:layout_editor_absoluteY="39dp" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/mode_indicator"
@@ -941,17 +947,72 @@
             <EditText
                 android:id="@+id/editText_RX_Call"
                 style="@style/text_new_user"
-                android:layout_width="110dp"
+                android:layout_width="100dp"
                 android:layout_height="66dp"
+                android:layout_marginStart="60dp"
                 android:layout_marginTop="117dp"
+                android:layout_marginEnd="600dp"
                 android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_rx"
                 android:ems="10"
                 android:hint="RX Call"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/editText_TX_RST"
-                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_RX_RST"
+                style="@style/text_new_user"
+                android:layout_width="73dp"
+                android:layout_height="66dp"
+                android:layout_marginStart="140dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginEnd="500dp"
+                android:layout_marginBottom="228dp"
+                android:background="@drawable/campo_rx"
+                android:ems="10"
+                android:hint="RX RST"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_RX_Nr"
+                style="@style/text_new_user"
+                android:layout_width="90dp"
+                android:layout_height="66dp"
+                android:layout_marginStart="210dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginEnd="400dp"
+                android:layout_marginBottom="228dp"
+                android:background="@drawable/campo_rx"
+                android:ems="10"
+                android:hint="RX Nr"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/editText_RX_Exch"
+                style="@style/text_new_user"
+                android:layout_width="90dp"
+                android:layout_height="66dp"
+                android:layout_marginStart="305dp"
+                android:layout_marginTop="117dp"
+                android:layout_marginEnd="305dp"
+                android:layout_marginBottom="228dp"
+                android:background="@drawable/campo_rx"
+                android:ems="10"
+                android:hint="RX Exch"
+                android:inputType="text"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -960,92 +1021,45 @@
                 style="@style/text_new_user"
                 android:layout_width="73dp"
                 android:layout_height="66dp"
+                android:layout_marginStart="405dp"
                 android:layout_marginTop="117dp"
-                android:layout_marginBottom="228dp"
-                android:background="@drawable/campo_rx"
-                android:ems="10"
-                android:hint="RX RST"
-                android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/editText_TX_Nr"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/editText_RX_Call"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/editText_TX_Nr"
-                style="@style/text_new_user"
-                android:layout_width="100dp"
-                android:layout_height="66dp"
-                android:layout_marginTop="117dp"
-                android:layout_marginBottom="228dp"
-                android:background="@drawable/campo_rx"
-                android:ems="10"
-                android:hint="RX Nr"
-                android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/editText_TX_Exch"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/editText_TX_RST"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/editText_TX_Exch"
-                style="@style/text_new_user"
-                android:layout_width="100dp"
-                android:layout_height="66dp"
-                android:layout_marginTop="117dp"
-                android:layout_marginBottom="228dp"
-                android:background="@drawable/campo_rx"
-                android:ems="10"
-                android:hint="RX Exch"
-                android:inputType="text"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/editText_RX_RST"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/editText_TX_Nr"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <EditText
-                android:id="@+id/editText_RX_RST"
-                style="@style/text_new_user"
-                android:layout_width="73dp"
-                android:layout_height="66dp"
-                android:layout_marginTop="117dp"
+                android:layout_marginEnd="228dp"
                 android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_tx"
                 android:ems="10"
                 android:hint="TX RST"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/editText_RX_Nr"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/editText_TX_Exch"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editText_RX_Nr"
+                android:id="@+id/editText_TX_Nr"
                 style="@style/text_new_user"
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="66dp"
+                android:layout_marginStart="480dp"
                 android:layout_marginTop="117dp"
+                android:layout_marginEnd="125dp"
                 android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_tx"
                 android:ems="10"
                 android:hint="TX Nr"
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/editText_RX_Exch"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/editText_RX_RST"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editText_RX_Exch"
+                android:id="@+id/editText_TX_Exch"
                 style="@style/text_new_user"
-                android:layout_width="100dp"
+                android:layout_width="90dp"
                 android:layout_height="66dp"
+                android:layout_marginStart="605dp"
                 android:layout_marginTop="117dp"
+                android:layout_marginEnd="60dp"
                 android:layout_marginBottom="228dp"
                 android:background="@drawable/campo_tx"
                 android:ems="10"
@@ -1053,8 +1067,7 @@
                 android:inputType="text"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/editText_RX_Nr"
+                app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <Button
