--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -691,7 +691,7 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
+        <!--pagina-->
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pag_6"
@@ -731,67 +731,32 @@
                 android:id="@+id/button_resume_contest"
                 android:layout_width="130dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="254dp"
-                android:layout_marginBottom="107dp"
                 android:background="@drawable/rouded_button"
                 android:gravity="center"
                 android:text="Resume"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/button_delete_contest"
                 app:layout_constraintEnd_toStartOf="@+id/button_edit_contest"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+                app:layout_constraintTop_toBottomOf="@+id/spinner_contests_initialized"
+                app:layout_constraintVertical_bias="0.5" />
 
             <Button
-                android:id="@+id/button_edit_contest"
+                android:id="@+id/button_export_cabrillo_contest"
                 android:layout_width="130dp"
                 android:layout_height="50dp"
-                android:layout_marginTop="254dp"
-                android:layout_marginBottom="107dp"
                 android:background="@drawable/rouded_button"
                 android:gravity="center"
-                android:text="Edit"
+                android:text="Cabrillo"
                 android:textColor="#FFFFFF"
                 android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button_export_contest"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/button_resume_contest"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/button_export_contest"
-                android:layout_width="130dp"
-                android:layout_height="50dp"
-                android:layout_marginTop="254dp"
-                android:layout_marginBottom="107dp"
-                android:background="@drawable/rouded_button"
-                android:gravity="center"
-                android:text="Export"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/button_contest_general_cancel"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/button_edit_contest"
-                app:layout_constraintTop_toTopOf="parent" />
-
-            <Button
-                android:id="@+id/button_delete_contest"
-                android:layout_width="130dp"
-                android:layout_height="50dp"
-                android:background="@drawable/rouded_button"
-                android:gravity="center"
-                android:text="Delete"
-                android:textColor="#FFFFFF"
-                android:textSize="20sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/button_contest_general_cancel"
-                app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/button_resume_contest"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_contests_initialized"
                 app:layout_constraintVertical_bias="0.5" />
 
             <Button
@@ -806,9 +771,58 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
-                app:layout_constraintStart_toEndOf="@+id/button_delete_contest"
-                app:layout_constraintTop_toBottomOf="@+id/button_export_contest"
+                app:layout_constraintStart_toEndOf="@+id/button_export_adif_contest"
+                app:layout_constraintTop_toBottomOf="@+id/button_export_cabrillo_contest"
                 app:layout_constraintVertical_bias="0.5" />
+
+            <Button
+                android:id="@+id/button_export_adif_contest"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="ADIF"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button_contest_general_cancel"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/button_delete_contest"
+                app:layout_constraintTop_toBottomOf="@+id/button_edit_contest"
+                app:layout_constraintVertical_bias="0.5" />
+
+            <Button
+                android:id="@+id/button_delete_contest"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="Delete"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/button_export_adif_contest"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/button_resume_contest"
+                app:layout_constraintVertical_bias="0.5" />
+
+            <Button
+                android:id="@+id/button_edit_contest"
+                android:layout_width="130dp"
+                android:layout_height="50dp"
+                android:background="@drawable/rouded_button"
+                android:gravity="center"
+                android:text="Edit"
+                android:textColor="#FFFFFF"
+                android:textSize="20sp"
+                app:layout_constraintBottom_toTopOf="@+id/button_export_adif_contest"
+                app:layout_constraintEnd_toStartOf="@+id/button_export_cabrillo_contest"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/button_resume_contest"
+                app:layout_constraintTop_toBottomOf="@+id/spinner_contests_initialized"
+                app:layout_constraintVertical_bias="0.5" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.constraintlayout.widget.ConstraintLayout
@@ -885,7 +899,7 @@
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintVertical_bias="0.742" />
         </androidx.constraintlayout.widget.ConstraintLayout>
-         <!--pagina-->
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/pag_8"
             android:layout_width="match_parent"
@@ -1183,7 +1197,7 @@
                     android:text="Mode"
                     android:textSize="12sp"
                     android:textStyle="bold" />
-                
+
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
